intento de valoracion

--- a/views/private/agregar_categorias.html
+++ b/views/private/agregar_categorias.html
@@ -30,7 +30,7 @@
                 Ingresar categoría
             </button>
             <div class="container col-6">
-                <label>Buscar categoria:</label>
+                <label>Buscar categoría:</label>
                 <input class="form-control me-2 light-table-filter" data-table="table" type="text">
             </div>
             <!-- Modal -->
@@ -39,9 +39,9 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">Agregar categoría</h5>
                             <button type="button" class="btn-close" data-mdb-dismiss="modal"
-                                aria-label="Close"></button>
+                                aria-label="Close">Cerrar</button>
                         </div>
                         <div class="modal-body">
                             <form id="save-form">
@@ -51,10 +51,10 @@
                                     <input type="text" class="validate" id="nombre" name="nombre" required>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Descripcion:</label>
+                                    <label for="message-text" class="col-form-label">Descripción:</label>
                                     <textarea class="validate" id="descripcion" name="descripcion" required></textarea>
                                 </div>
-                                <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Cerrar</button>
                                 <button type="submit" class="btn btn-secondary" id="create">Agregar</button>
                             </form>
 
