--- a/views/private/index.html
+++ b/views/private/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Iniciar sesión</title>
     <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
@@ -18,7 +18,7 @@
     <div class="visually-hidden" id="login-container-div">
         <form  method="post" id="login-form">
             <div>
-                <h1 class="title">Private Login</h1>
+                <h1 class="title">Sitio privado</h1>
             </div>
             <label for="usuario" id="labelfont">
                 <img src="../../recursos/iconos/user.png" width="15" height="15" alt="">
@@ -29,7 +29,7 @@
                 <input placeholder="Contraseña" type="password" id="clave" name="clave" class="validate" required>
             </label>
             <a href="">
-                <button class="button tooltipped" input type="submit" value="Registrar" data-tooltip="Ingresar">iniciar
+                <button class="button tooltipped" input type="submit" value="Registrar" data-tooltip="Ingresar">Iniciar
                     sesión</button>
             </a>
         </form>
@@ -39,7 +39,7 @@
             <form method="post" id="signup-form">
                 <div>
                     <div>
-                        <h1 class="title">Registrate</h1>
+                        <h1 class="title">Regístrate</h1>
                     </div>
                     <div class="user-detail">
                         <label for="">
