--- a/views/private/agregar_productos.html
+++ b/views/private/agregar_productos.html
@@ -41,7 +41,7 @@
                             <form id="save-form">
                                 <input class="visually-hidden" type="number" id="id" name="id">
                                 <div class="mb-3">
-                                    <p>Seleccione una SubCategoria</p>
+                                    <p>Seleccione una subcategoria</p>
                                     <select class="form-select" aria-label="Seleccione subcategoria" id="subcategoria"
                                         name="subcategoria">
                                     </select>
@@ -57,7 +57,7 @@
                                     <input type="text" class="form-control" id="nombre" name="nombre">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="message-text" class="col-form-label">Descripcion:</label>
+                                    <label for="message-text" class="col-form-label">Descripción:</label>
                                     <textarea class="form-control" id="descripcion" name="descripcion"></textarea>
                                 </div>
                                 <p>Precio del producto:</p>
@@ -103,7 +103,7 @@
                 <thead>
                     <tr id="records"></tr>
                     <tr>
-                        <th scope="col">Subcategoria</th>
+                        <th scope="col">Subcategoría</th>
                         <th scope="col">Usuario</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Descripción</th>
