--- a/views/public/sign_up.html
+++ b/views/public/sign_up.html
@@ -8,7 +8,7 @@
     <title>Registrate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/sign-up.css">
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -98,36 +98,36 @@
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Nombre" required>
+                            <img src="../../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Nombre" class="validate" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/iconos/user.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Apellido" required>
+                            <img src="../../recursos/iconos/user.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Apellido" class="validate" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/iconos/id.png" alt="" width="20px" height="20px">
-                            <input type="text" placeholder="DUI" required>
+                            <img src="../../recursos/iconos/id.png" alt="" width="20px" height="20px">
+                            <input type="text" placeholder="DUI" class="validate" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/iconos/lock.png" alt="" width="13px" height="16px">
-                            <input type="text" placeholder="Clave" required>
+                            <img src="../../recursos/iconos/lock.png" alt="" width="13px" height="16px">
+                            <input type="text" placeholder="Clave" class="validate" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Confirmar clave" required>
+                            <img src="../../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
+                            <input type="text" placeholder="Confirmar clave" class="confirmar" required>
                         </div>
                     </label>
                     
@@ -136,15 +136,15 @@
                     <label for="" class="label2">
                         <div class="input-box">
                             <span class="details"></span>
-                            <img src="../recursos/iconos/correo.png" alt="" width="16px" height="16px">
-                            <input class="largo" type="text" placeholder="Correo" required>
+                            <img src="../../recursos/iconos/correo.png" alt="" width="16px" height="16px">
+                            <input class="largo" type="text" placeholder="Correo" class="validate" required>
                         </div>
                     </label>
                     <label for="" class="label2">
                         <div class="input-box">
 
-                            <img src="../recursos/iconos/direccion.png" alt="" width="16px" height="16px">
-                            <input class="largo" type="text" placeholder="Dirección" required>
+                            <img src="../../recursos/iconos/direccion.png" alt="" width="16px" height="16px">
+                            <input class="largo" type="text" placeholder="Dirección" class="validate" required>
                         </div>
                     </label>
                     <div class="form-check">
