--- a/views/private/agregar_subcategorias.html
+++ b/views/private/agregar_subcategorias.html
@@ -51,6 +51,10 @@
                                     <input type="text" class="form-control" id="nombre" name="nombre">
                                 </div>
                                 <div class="mb-3">
+                                    <label for="recipient-name" class="col-form-label">Descripción:</label>
+                                    <input type="text" class="form-control" id="descripcion" name="descripcion">
+                                </div>
+                                <div class="mb-3">
                                     <label for="formFileMultiple" class="form-label">Seleccione una imagen</label>
                                     <input class="form-control" id="archivo" type="file" name="archivo" accept=".jpg, .png" multiple />
                                 </div>
