--- a/views/private/agregar_productos.html
+++ b/views/private/agregar_productos.html
@@ -63,8 +63,8 @@
                                 <p>Precio del producto:</p>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text">$</span>
-                                    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)"
-                                        id="precio" name="precio">
+                                    <input type="number" class="form-control" aria-label="Amount (to the nearest dollar)"
+                                        id="precio" name="precio" min="0" step="0.01">
                                 </div>
 
                                 <div class="mb-3">
