--- a/views/public/login.html
+++ b/views/public/login.html
@@ -6,33 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/estilo.css">
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="D1">
-    <form action="">
+    <div>
+        <header>
+
+        </header>
+    </div>
+    <form id="login-form" action="">
         <div>
             <h1 class="title">Furnicom Login</h1>
         </div>
 
         <label for="" id="labelfont">
-            <img src="../recursos/user.png" width="15" height="15" alt="">
-            <input placeholder="Usuario" type="text" id="username">
+            <img src="../../recursos/iconos/user.png" width="15" height="15" alt="">
+            <input placeholder="Usuario" type="text" id="usuario" name="usuario">
         </label>
         <label for="">
-            <img src="../recursos/lock.png" width="15" height="15" alt="">
-            <input placeholder="Contraseña" type="password" id="password">
+            <img src="../../recursos/iconos/lock.png" width="15" height="15" alt="">
+            <input placeholder="Contraseña" type="password" id="clave" name="clave">
         </label>
-        <button id="button"> <a href="../public/index.html"> Iniciar sesión </a></button>
+        <a href="">
+            <button class="button tooltipped" input type="submit" value="Registrar" data-tooltip="Ingresar">Iniciar
+                sesión</button>
+        </a>
 
         <a href="#" class="link">¿Olvidaste tu contraseña?</a>
-        <a href="#" class="link">¿No tienes cuenta? Resgistrate aquí</a>
+        <a href="sign_up.html" class="link">¿No tienes cuenta? Resgistrate aquí</a>
 
     </form>
-    <script src="main.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+    <script src="https://www.google.com/recaptcha/api.js?render=6LdBzLQUAAAAAJvH-aCUUJgliLOjLcmrHN06RFXT"></script>
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../../controllers/components.js"></script>
+    <script type="text/javascript" src="../../controllers/public/login.js"></script>
+    <script type="text/javascript" src="../../controllers/public/account.js"></script>
+
 </body>
 
 </html>
