--- a/views/public/products.html
+++ b/views/public/products.html
@@ -9,20 +9,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/estilo.css">
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
 
-        <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
 
     <title>Productos</title>
 </head>
 <main>
-    <body>       
+
+    <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
                 <!-- Container wrapper -->
@@ -38,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <!-- Navbar brand -->
                         <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                            <img src="../recursos/FURNICOM.png" height="60" alt="Furnicom logo" loading="lazy" />
+                            <img src="" height="60" alt="Furnicom logo" loading="lazy" />
                         </a>
                         <!-- Left links -->
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -114,160 +111,20 @@
         </header>
 
 
-        <section>
-
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-sm-5 col-md-2 lg-2 col-xl-2" id="filtros">
-                        <h4 class="tt1">Filtros de busqueda</h4>
-                        <p class="pp">Categoria</p>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Dormitorio</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Sala</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Cocina</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Accesorios</label>
-                        </div>
-
-                        <p class="pp">Subcategoria</p>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Mesas</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Sillas</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Sofas</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Roperos</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Alacenas</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Bancos</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Gavinetes</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Lámparas</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Cojines</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Floreros</label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-                            <label class="form-check-label" for="flexCheckDefault">Tapetes</label>
-                        </div>
-
-                    </div>
-                    <div class="col">
-                        <div>
-                            <div class="row row-cols-1 row-cols-md-3 g-3" id="mg">
-                                <div class="col">
-                                    <div class="card h-100">
-                                        <a href="../public/Vistas Productos/vista_producto2.html"> <img
-                                                src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top"
-                                                alt="Skyscrapers" /> </a>
-                                        <div class="card-body">
-                                            <a href="../public/Vistas Productos/vista_producto2.html">
-                                                <h5 class="card-title">Juego de mesa Jardin</h5>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card h-100">
-                                        <a href="../public/Vistas Productos/vista_produc.html"><img
-                                                src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
-                                                alt="Los Angeles Skyscrapers" /></a>
-                                        <div class="card-body">
-                                            <a href="../public/Vistas Productos/vista_produc.html">
-                                                <h5 class="card-title">Sofá Cama</h5>
-                                            </a></a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card h-100">
-                                        <a href="../public/Vistas Productos/vista_producto3.html"><img
-                                                src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
-                                                alt="Palm Springs Road" /></a>
-                                        <div class="card-body">
-                                            <a href="../public/Vistas Productos/vista_producto3.html">
-                                                <h5 class="card-title">Sofá para sala</h5>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row row-cols-1 row-cols-md-3 g-4" id="mg">
-                                <div class="col">
-                                    <div class="card h-100">
-                                        <img src="../recursos/pexels-pixabay-279675.jpg" class="card-img-top"
-                                            alt="Skyscrapers" />
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                        </div>
-                                        <div class="card-footer">
-                                            <small class="text-muted">Last updated 3 mins ago</small>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card h-100">
-                                        <img src="../recursos/safa-cama-barato-amazon.jpeg" class="card-img-top"
-                                            alt="Los Angeles Skyscrapers" />
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                        </div>
-                                        <div class="card-footer">
-                                            <small class="text-muted">Last updated 3 mins ago</small>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card h-100">
-                                        <img src="../recursos/pexels-lisa-fotios-1631918.jpg" class="card-img-top"
-                                            alt="Palm Springs Road" />
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                        </div>
-                                        <div class="card-footer">
-                                            <small class="text-muted">Last updated 3 mins ago</small>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <main class="container">
+            <!-- Título del contenido principal -->
+            <h4 class="center indigo-text" id="title"></h4>
+            <!-- Fila para mostrar los productos disponibles -->
+            <div class="row" id="productos">
             </div>
-        </section>
+            
+        </main>
+
+
+
+
+
+
         <!-- Footer -->
         <footer class="text-center text-lg-start  text-muted" id="c1">
             <!-- Section: Social media -->
@@ -391,7 +248,14 @@
         </footer>
         <!-- Footer -->
     </body>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+        <script type="text/javascript" src="../../controllers/public/producto.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+        <script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
+        <script src="../../controllers/components.js"></script>
 </main>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
 
 </html>
