--- a/views/public/vista_produc.html
+++ b/views/public/vista_produc.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/estilo.css">
+    <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
     <title>Descripcion</title>
 </head>
@@ -18,8 +18,6 @@
            
     </header>
 
-    <br><br><br><br><br>
-
     <main class="container">
         <!-- Título del contenido principal -->
         <h4 class="center indigo-text" id="title">Detalles del producto</h4>
@@ -27,13 +25,13 @@
         <div class="card horizontal" id="detalle">
             <div class="card-image">
                 <!-- Se muestra una imagen por defecto mientras se carga la imagen del producto -->
-                <img id="imagen" src="../../resources/img/unknown.png">
+                <img id="imagen" src="">
             </div>
             <div class="card-stacked">
                 <div class="card-content">
                     <h4 id="nombre" class="header"></h4>
                     <p id="descripcion"></p>
-                    <p>Precio (US$) <b id="precio"></b></p> 
+                    <p>Precio (US$) <b id="precio" name="precio"></b></p> 
                 </div>
                 <div class="card-action">
                     <!-- Formulario para agregar el producto al carrito de compras -->
