--- a/resources/css/estilo.css
+++ b/resources/css/estilo.css
@@ -253,4 +253,26 @@ header{
 footer{
     margin-top: 200px;
 }
+ 
+/* carrito */
+.cr1{
+margin-bottom: 25px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+font-size:250% !important;
+}
+
+.botonCompra{
+    display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+}
+
+.row1, .row2{
+   margin: 50px;
+}
+
 
