--- a/views/public/vista_produc.html
+++ b/views/public/vista_produc.html
@@ -53,6 +53,25 @@
                 </div>
             </div>
         </div>
+
+        <!--Seccion de comentarios  -->
+        <h1 class="tilin2">Comentarios y valoraciones</h1>
+        <form action="">        
+              <div class="card border border-success shadow-0 mb-3 tilin" style="max-width: 18rem;">
+                <div class="card-header bg-transparent border-success" id="nombre_cliente"></div>
+                <div class="card-body text-success">
+                  <p class="card-title" id="comentario"></p>
+                  <hr>
+                  <p>calificacion</p>
+                  <p class="card-text" id="calificacion"></p>
+                </div>
+                <div class="card-footer bg-transparent border-success">
+                    <p id="fecha"></p>
+                </div>
+              </div>
+    </form>
+
+
     </main>
         <!-- Footer -->
         <footer class="text-center text-lg-start  text-muted" id="c1">
