Valoracion y abrir modal para actualizar cantidad(aun no funciona)

--- a/resources/css/estilo.css
+++ b/resources/css/estilo.css
@@ -278,6 +278,12 @@ justify-content: center;
 
 .tilin{
     background-color: #fdfdfd !important;
+
+}
+
+#tilin3{
+    display: flex;
+    flex-direction: row;
 }
 
 .tilin2{
