--- a/views/public/vista_produc.html
+++ b/views/public/vista_produc.html
@@ -10,7 +10,8 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
-    <title>Descripcion</title>
+    <link type="image/png" rel="icon" href="../../recursos/iconos/icono.png">
+    <title>Detalle producto</title>
 </head>
 
 <body>
@@ -53,23 +54,17 @@
                 </div>
             </div>
         </div>
-
-        <!--Seccion de comentarios  -->
         <h1 class="tilin2">Comentarios y valoraciones</h1>
-        <form action="">        
-              <div class="card border border-success shadow-0 mb-3 tilin" style="max-width: 18rem;">
-                <div class="card-header bg-transparent border-success" id="nombre_cliente"></div>
-                <div class="card-body text-success">
-                  <p class="card-title" id="comentario"></p>
-                  <hr>
-                  <p>calificacion</p>
-                  <p class="card-text" id="calificacion"></p>
-                </div>
-                <div class="card-footer bg-transparent border-success">
-                    <p id="fecha"></p>
-                </div>
-              </div>
-    </form>
+        <!--Seccion de comentarios  -->
+        <div class="container">
+            <div id="tilin3">
+                
+                <h4 class="center indigo-text" id="title"></h4>
+    
+            </div>
+        </div>
+
+
 
 
     </main>
