--- a/views/private/agregar_subcategorias.html
+++ b/views/private/agregar_subcategorias.html
@@ -11,6 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../resources/css/estilo.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link type="image/png" rel="icon" href="../../recursos/iconos/icono.png">
     <title>Agregar Subcategoria</title>
 </head>
 
