--- a/views/private/agregar_usuarios.html
+++ b/views/private/agregar_usuarios.html
@@ -11,7 +11,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
-
+    <link type="image/png" rel="icon" href="../../recursos/iconos/icono.png">
     <title>Agregar usuarios</title>
 </head>
 
