ni idea pero plumba

--- a/views/public/sign_up.html
+++ b/views/public/sign_up.html
@@ -59,14 +59,14 @@
                         <div class="input-box">
                             <span class="details"></span>
                             <img src="../../recursos/iconos/lock.png" alt="" width="13px" height="16px">
-                            <input type="text" placeholder="Clave" id="clave" name="clave" required>
+                            <input type="password" placeholder="Clave" id="clave" name="clave" required>
                         </div>
                     </label>
                     <label for="">
                         <div class="input-box">
                             <span class="details"></span>
                             <img src="../../recursos/iconos/confirmar.png" alt="" width="16px" height="16px">
-                            <input type="text" placeholder="Confirmar clave" id="confirmar" name="confirmar" required>
+                            <input type="password" placeholder="Confirmar clave" id="confirmar" name="confirmar" required>
                         </div>
                     </label>
                     
