--- a/views/private/pedidos.html
+++ b/views/private/pedidos.html
@@ -41,15 +41,17 @@
                                 <input class="visually-hidden" type="number" id="id_pedido" name="id_pedido">
                                 <div class="visually-hidden mb-3">
                                     <label for="recipient-name" class=" col-form-label">Cliente:</label>
-                                    <input type="text" class="validate" id="nombre_cliente" name="nombre_cliente" required>
+                                    <input type="text" class="validate" id="nombre_cliente" name="nombre_cliente"
+                                        required>
                                 </div>
                                 <div class="mb-3">
                                     <p>Estado del pedido</p>
                                     <!-- Default switch -->
                                     <div class="form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" role="switch"
-                                            id="estado" name="estado"/>
-                                        <label class="form-check-label" for="flexSwitchCheckDefault"> No Disponible / Disponible</label>
+                                        <input class="form-check-input" type="checkbox" role="switch" id="estado"
+                                            name="estado" />
+                                        <label class="form-check-label" for="flexSwitchCheckDefault"> No Disponible /
+                                            Disponible</label>
                                     </div>
                                 </div>
                                 <div class="visually-hidden mb-3">
@@ -88,39 +90,42 @@
             </table>
 
             <!-- Button trigger modal -->
-<button type="button" class="visually-hidden btn btn-primary" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Detalle del pedido</h5>
-          <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <table class="table table-responsive-sm">
-                <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Pedido</th>
-                        <th scope="col">Producto</th>
-                        <th scope="col">Cantidad</th>
-                    </tr>
-                </thead>
-                <tbody id="tbody-rows2">
+            <button type="button" class="visually-hidden btn btn-primary" data-mdb-toggle="modal"
+                data-mdb-target="#exampleModal">
+                Launch demo modal
+            </button>
 
-                </tbody>
-            </table>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Detalle del pedido</h5>
+                            <button type="button" class="btn-close" data-mdb-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <table class="table table-responsive-sm">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Pedido</th>
+                                        <th scope="col">Producto</th>
+                                        <th scope="col">Cantidad</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody-rows2">
+
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </main>
@@ -134,7 +139,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <script type="text/javascript" src="../../controllers/dashboard/pedidos.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/pedidos.js"></script>
     <script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
     <script src="../../controllers/components.js"></script>
