--- a/views/public/carrito_compras.html
+++ b/views/public/carrito_compras.html
@@ -26,82 +26,83 @@
     <h4 class="center-align cr1">Carrito de compras</h4>
     <!-- Tabla para mostrar el detalle de los productos agregados al carrito de compras -->
     <table class="table highlight">
-        <!-- Cabeza de la tabla para mostrar los títulos de las columnas -->
-        <thead>
-            <tr>
-                <th>PRODUCTO</th>
-                <th>PRECIO (US$)</th>
-                <th>CANTIDAD</th>
-                <th>SUBTOTAL (US$)</th>
-                <th>ACCIONES</th>
-            </tr>
-        </thead>
-        <!-- Cuerpo de la tabla para mostrar un registro por fila -->
-        <tbody id="tbody-rows"></tbody>
+      <!-- Cabeza de la tabla para mostrar los títulos de las columnas -->
+      <thead>
+        <tr>
+          <th>PRODUCTO</th>
+          <th>PRECIO (US$)</th>
+          <th>CANTIDAD</th>
+          <th>SUBTOTAL (US$)</th>
+          <th>ACCIONES</th>
+        </tr>
+      </thead>
+      <!-- Cuerpo de la tabla para mostrar un registro por fila -->
+      <tbody id="tbody-rows"></tbody>
     </table>
     <!-- Fila para mostrar el monto total a pagar -->
     <div class="row right-align">
-        <p>TOTAL A PAGAR (US$) <b id="pago"></b></p>
+      <p>TOTAL A PAGAR (US$) <b id="pago"></b></p>
     </div>
     <!-- Fila para mostrar un botón que finaliza el pedido -->
 
 
-    
+
 
 
     <div class="botonCompra">
-        <div class="row1">
-        <p>Pagar la compra</p> 
+      <div class="row1">
+        <p>Pagar la compra</p>
         <a onclick="finishOrder()" class="btn " data-tooltip="Finalizar pedido">
-           <img src="../../recursos/bolsa-de-la-compra.png" alt="">
+          <img src="../../recursos/bolsa-de-la-compra.png" alt="">
         </a>
-    </div>
-    <!-- Fila para mostrar un enlace con la dirección de la página web principal para seguir comprando -->
-    <div class="row2">
+      </div>
+      <!-- Fila para mostrar un enlace con la dirección de la página web principal para seguir comprando -->
+      <div class="row2">
         <p>Regresar a la tienda</p>
         <a href="index.html" class="btn" data-tooltip="Seguir comprando">
-            <img src="../../recursos/tienda.png" alt="">
+          <img src="../../recursos/tienda.png" alt="">
         </a>
-    </div>
+      </div>
     </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modificar cantidad</h5>
-          <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modificar cantidad</h5>
+            <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
             <form class="row" method="post" id="item-form">
-                <!-- Campo oculto para asignar el id del registro al momento de modificar -->
-                <input type="number" id="id_detalle" name="id_detalle" class="visually-">
-                <div class="input-field col s12 m4 offset-m4">
-                    <input type="number" id="cantidad" name="cantidad" min="1" class="validate" required>
-                    <label for="cantidad">Cantidad</label>
-                </div>
+              <!-- Campo oculto para asignar el id del registro al momento de modificar -->
+              <input type="number" id="id_detalle" name="id_detalle" class="visually-">
+              <div class="input-field col s12 m4 offset-m4">
+                <input type="number" id="cantidad" name="cantidad" min="1" class="validate" required>
+                <label for="cantidad">Cantidad</label>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Cerrar</button>
+                <button class="btn btn-primary" type="submit">Guardar</button>
+              </div>
             </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary" type="submit">Guardar</button>
+          </div>
+
         </div>
       </div>
     </div>
+
+
+  </main>
   </div>
 
 
-</main>
-  </div>
+  <!-- Footer -->
+  <footer class="text-center text-lg-start  text-muted" id="c1">
 
-  
-    <!-- Footer -->
-    <footer class="text-center text-lg-start  text-muted" id="c1">
-
-    </footer>
-    <!-- Footer -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  </footer>
+  <!-- Footer -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
@@ -109,7 +110,7 @@
   <script type="text/javascript" src="../../controllers/components.js"></script>
   <script type="text/javascript" src="../../controllers/public/account.js"></script>
   <script type="text/javascript" src="../../controllers/public/cart.js"></script>
-  
+
 </body>
 
 </html>
