--- a/views/public/index.html
+++ b/views/public/index.html
@@ -9,24 +9,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />    
     <link rel="stylesheet" href="../../resources/css/estilo.css">
     <link type="image/png" rel="icon" href="../../recursos/iconos/icono.png">
     <title>Furnicome</title>
 </head>
 
 <body>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-
-
-    <header>
-        
-    </header>
+    <header></header>
     <br>
     <section>
 
@@ -92,7 +82,7 @@
                     <div class="carousel-inner rounded-5 shadow-4-strong">
                         <!-- Single item -->
                         <div class="carousel-item active">
-                            <img src="../recursos/carrusel/slide1.jpg" class="d-block w-100"
+                            <img src="../../recursos/carrusel/slide1.jpg" class="d-block w-100"
                                 alt="Sunset Over the City" />
                             <div class="carousel-caption d-none d-md-block">
                             </div>
@@ -107,7 +97,7 @@
 
                         <!-- Single item -->
                         <div class="carousel-item">
-                            <img src="../recursos/carrusel/slide3.jpg" class="d-block w-100"
+                            <img src="../../recursos/carrusel/slide3.jpg" class="d-block w-100"
                                 alt="Cliff Above a Stormy Sea" />
                             <div class="carousel-caption d-none d-md-block">
                             </div>
@@ -257,6 +247,13 @@
         </footer>
         <!-- Footer -->
     </div>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/components.js"></script>
     <script type="text/javascript" src="../../controllers/public/account.js"></script>  
