--- a/views/public/products.html
+++ b/views/public/products.html
@@ -13,18 +13,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
     <link type="image/png" rel="icon" href="../../recursos/iconos/icono.png">
-
-    <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
-
     <title>Productos</title>
 </head>
-<main>
 
-    <body>
-        <header>
-           
-        </header>
-
+<body>
+    <main>
+        <header> </header>
+        <div class="container col-6">
+            <label>Buscar producto:</label>
+            <input class="form-control me-2 light-table-filter" data-table="table" type="text">
+        </div>
 
         <main class="container">
             <!-- Título del contenido principal -->
@@ -32,28 +30,25 @@
             <!-- Fila para mostrar los productos disponibles -->
             <div class="row" id="productos">
             </div>
-            
+
         </main>
-
-
-
-
-
 
         <!-- Footer -->
         <footer class="text-center text-lg-start  text-muted" id="c1">
         </footer>
         <!-- Footer -->
-    </body>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-        <script type="text/javascript" src="../../controllers/public/producto.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/eb496ab1a0.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="../../resources/js/sweetalert.min.js"></script>
-        <script src="../../controllers/components.js"></script>
-        <script type="text/javascript" src="../../controllers/public/account.js"></script>  
-</main>
+        <script src="../../controllers/components.js"></script>//Método para cargar el usuario que insertó el producto
+        <script type="text/javascript" src="../../controllers/public/account.js"></script>
+        <script type="text/javascript" src="../../controllers/public/producto.js"></script>
+    </main>
+</body>
 
 </html>
