--- a/views/private/agregar_productos.html
+++ b/views/private/agregar_productos.html
@@ -99,13 +99,12 @@
                     <tr id="records"></tr>
                     <tr>
                         <th scope="col">Subcategoría</th>
-                        <th scope="col">Usuario</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Descripción</th>
                         <th scope="col">Precio</th>
-                        <th scope="col">Imagen</th>
                         <th scope="col">Estado</th>
                         <th scope="col">Existencia</th>
+                        <th scope="col">Mantenimientos</th>
                     </tr>
                 </thead>
                 <tbody id="tbody-rows"></tbody>
