--- a/views/private/main.html
+++ b/views/private/main.html
@@ -38,6 +38,10 @@
                 <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
                 <canvas id="chart2"></canvas>
             </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 ">
+                <!-- Se muestra un gráfico -->
+                <canvas id="chart3"></canvas>
+            </div>
         </div>
 
 
@@ -60,7 +64,7 @@
     <script type="text/javascript" src="../../controllers/dashboard/account.js"></script>
     <script type="text/javascript" src="../../recursos/js/sweetalert.min.js"></script>
     <script type="text/javascript" src="../../controllers/components.js"></script>
-    <script type="text/javascript" src="../../controllers/main.js"></script>
+    <script type="text/javascript" src="../../controllers/dashboard/main.js"></script>
 </body>
 
 </html>
