Reporte pedidos en estado true

--- a/views/private/pedidos.html
+++ b/views/private/pedidos.html
@@ -26,6 +26,11 @@
                 <label>Buscar Pedido:</label>
                 <input class="form-control me-2 light-table-filter" data-table="table" type="text">
             </div>
+            <div>
+                <p>Generar reporte de pedidos finalizados</p>
+                <button onclick="openReport()" type="button" class="btn btn-warning" >Generar reporte</button>
+
+            </div>
             <!-- Modal -->
             <div class="modal exampleModal" id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
