Reporte de pedidos en proceso 5/5 reportes

--- a/views/private/pedidos.html
+++ b/views/private/pedidos.html
@@ -26,9 +26,16 @@
                 <label>Buscar Pedido:</label>
                 <input class="form-control me-2 light-table-filter" data-table="table" type="text">
             </div>
-            <div>
-                <p>Generar reporte de pedidos finalizados</p>
-                <button onclick="openReport()" type="button" class="btn btn-warning" >Generar reporte</button>
+            <div class="row">
+                <div class="col">
+                    <p>Generar reporte de pedidos finalizados</p>
+                    <button onclick="openReport()" type="button" class="btn btn-warning">Generar reporte</button>
+                </div>
+                <div class="col">
+                    <p>Generar reporte de pedidos en proceso</p>
+                    <button onclick="openReport2()" type="button" class="btn btn-warning">Generar reporte</button>
+
+                </div>
 
             </div>
             <!-- Modal -->
