--- a/views/private/main.html
+++ b/views/private/main.html
@@ -38,11 +38,16 @@
                 <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
                 <canvas id="chart2"></canvas>
             </div>
+        </div>
+
+        <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 ">
                 <!-- Se muestra un gráfico -->
                 <canvas id="chart3"></canvas>
             </div>
         </div>
+
+
 
 
         <script src="../../resources/js/chart.umd.min.js"></script>
