intento de factura

--- a/views/public/carrito_compras.html
+++ b/views/public/carrito_compras.html
@@ -63,6 +63,12 @@
           <img src="../../recursos/tienda.png" alt="">
         </a>
       </div>
+      <div class="row3">
+        <p>Comprobante de compra</p>
+        <a onclick="openReport()" class="btn" data-tooltip="Factura">
+          <img src="" alt="">
+        </a>
+      </div>
     </div>
 
     <!-- Modal -->
