--- a/views/private/agregar_subcategorias.html
+++ b/views/private/agregar_subcategorias.html
@@ -26,6 +26,10 @@
     </header>
     <section>
         <div class="container">
+            <div class="col-sm-12 col-md-6 col-lg-4 triplexd">
+                <p>Generar cuantas subcategorias hay por categoria</p>
+                <button onclick="openReport()" type="button" class="btn btn-warning">Generar reporte</button>
+            </div>
             <!-- Button trigger modal -->
             <button onclick="openCreate()" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target=".exampleModal">
                 Agregar Subcategoria
