--- a/views/private/main.html
+++ b/views/private/main.html
@@ -29,27 +29,30 @@
         <div class="row">
             <h4 class="text-center blue-text" id="greeting"></h4>
         </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-6 ">
+        <div class="row ">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
                 <canvas id="chart1"></canvas>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6 ">
+            <div class="col-sm-12 col-md-6 col-lg-6">
                 <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
                 <canvas id="chart2"></canvas>
             </div>
-        </div>
-
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-6 ">
-                <!-- Se muestra un gráfico -->
-                <canvas id="chart3"></canvas>
+            <div class="row triplexd2">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
+                    <canvas id="chart3"></canvas>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-5 ">
+                    <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
+                    <canvas id="chart4"></canvas>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 ">
+                    <!-- Se muestra un gráfico de barra con la cantidad de productos por categoría -->
+                    <canvas id="chart5"></canvas>
+                </div>
             </div>
         </div>
-
-
-
-
         <script src="../../resources/js/chart.umd.min.js"></script>
     </main>
 
