--- a/views/private/agregar_categorias.html
+++ b/views/private/agregar_categorias.html
@@ -34,6 +34,14 @@
                 <label>Buscar categoría:</label>
                 <input class="form-control me-2 light-table-filter" data-table="table" type="text">
             </div>
+            <div class="container">
+                <h3 class="center-align">reportes:</h3>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-4 triplexd">
+                        <button onclick="openReport()" type="button" class="btn btn-warning">Categorías</button>
+                    </div>
+                </div>
+            </div>
             <!-- Modal -->
             <div class="modal exampleModal" id="save-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
